; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_PushDownBelowUnaryChild.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_PushDownBelowUnaryChild.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @PushDownBelowUnaryChild to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PushDownBelowUnaryChild(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @ParentNode(i32* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @ChildNode(i32* %9)
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @ParentSetNewChild(i32* %11, i32* %12, i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @SetChild(i32* %15, i32* %16)
  %18 = load i32*, i32** %3, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @SetChild(i32* %18, i32* %19)
  ret void
}

declare dso_local i32* @ParentNode(i32*) #1

declare dso_local i32* @ChildNode(i32*) #1

declare dso_local i32 @ParentSetNewChild(i32*, i32*, i32*) #1

declare dso_local i32 @SetChild(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
